# cetkAIk

./: Cargo.toml  README.md
src/: cerke_online_bot_port.rs  cetkaik_engine.rs  greedy.rs  main.rs  min_max_avg.rs  random_player.rs  tun2_kik1.rs
